@@ -4,51 +4,46 @@ import itacademy.blackjackspring5.model.mongodb.Card;
 import itacademy.blackjackspring5.model.mongodb.enums.Rank;
 import itacademy.blackjackspring5.model.mongodb.enums.Suit;
 
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class DeckUtils {
 
-
     public static List<Card> createFullDeck() {
         return Stream.of(Suit.values())
                 .flatMap(suit -> Stream.of(Rank.values())
+                        .filter(rank -> suit != Suit.HIDDEN && rank != Rank.HIDDEN)
                         .map(rank -> new Card(suit, rank))
-                ).toList();
+                ).collect(Collectors.toList());
     }
 
-
     public static List<Card> createShuffledDeck() {
-        List<Card> deck = createFullDeck();
+        List<Card> deck = new ArrayList<>(createFullDeck());
         Collections.shuffle(deck);
         return deck;
     }
 
-
-    public static List<Card> serializeDeck(List<Card> deck) {
+    public static List<String> serializeDeck(List<Card> deck) {
         return deck.stream()
                 .map(card -> card.getRank().name() + "-" + card.getSuit().name())
                 .collect(Collectors.toList());
     }
 
-
-    public static List<Card> deserializeDeck(List<Card> serializedDeck) {
+    public static List<Card> deserializeDeck(List<String> serializedDeck) {
         return serializedDeck.stream()
                 .map(serializedCard -> {
+                    String normalized = serializedCard.trim().toUpperCase().replaceAll("\\s+", "_");
+                    String[] parts = normalized.split("[-_]"); // Acepta "RANK SUIT" o "RANK-SUIT"
+                    if (parts.length != 2) {
+                        throw new IllegalArgumentException("Formato inválido: " + serializedCard);
+                    }
                     try {
-                        String[] parts = serializedCard.split("-");
-                        if (parts.length != 2) {
-                            throw new IllegalArgumentException("Formato inválido. Se esperaba 'RANK-SUIT'");
-                        }
-
-                        return new Card(
-                                Suit.valueOf(parts[1].trim().toUpperCase()),
-                                Rank.valueOf(parts[0].trim().toUpperCase())
-                        );
+                        Rank rank = Rank.valueOf(parts[0]);
+                        Suit suit = Suit.valueOf(parts[1]);
+                        return new Card(suit, rank);
                     } catch (IllegalArgumentException e) {
-                        throw new IllegalArgumentException("Error al deserializar: " + serializedCard, e);
+                        throw new IllegalArgumentException("Valores inválidos en: " + serializedCard);
                     }
                 })
                 .collect(Collectors.toList());
@@ -58,26 +53,32 @@ public class DeckUtils {
         int total = 0;
         int aces = 0;
 
-        for (String card : hand) {
-            if (card.equals("HIDDEN")) continue;
+        for (String cardStr : hand) {
+            if (cardStr.contains("HIDDEN")) continue;
 
-            String[] parts = card.split("-");
-            Rank rank = Rank.valueOf(parts[0]);
-            total += rank.getValue();
-            if (rank == Rank.ACE) aces++;
+            String[] parts = cardStr.split("-");
+            if (parts.length != 2) continue;
+
+            try {
+                Rank rank = Rank.valueOf(parts[0].trim().toUpperCase());
+                total += rank.getValue();
+                if (rank == Rank.ACE) aces++;
+            } catch (IllegalArgumentException ignored) {
+            }
         }
 
         while (total > 21 && aces > 0) {
             total -= 10;
             aces--;
         }
+
         return total;
     }
 
     public static List<String> drawCards(List<Card> deck, int count) {
         return Stream.generate(() -> deck.remove(0))
                 .limit(count)
-                .map(Card::toString)
+                .map(card -> card.getRank().name() + "-" + card.getSuit().name())
                 .collect(Collectors.toList());
     }
 }
